<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Cab-E Operator</string>
    <string name="google_map_api" translatable="false">AIzaSyASZQgAm74PU7w6Id0K-wQXOEKFALs79nY</string>
    <string name="FACEBOOK_APP_ID" translatable="false"></string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN" translatable="false"></string>
    <string name="mobile_valid">Mobile number must be atleast 10 digits</string>
    <string name="app_active">app is active</string>
    <string name="signin_txt">Welcome back, Sign in to continue</string>
    <string name="signin">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="enter_otp_digit">Enter 4 digits verification code \nsend to your phone number</string>
    <string name="signup_here"><u>Signup</u></string>
    <string name="click_here"><u>Click here</u></string>
    <string name="skip">SKIP</string>
    <string name="HelpSupport">Help &amp; Support</string>
    <string name="no_avaliable_service">service not available!, kindly check selected location and try again</string>
    <string name="version_up_message">There is a new version of Pikap Driver App available, this version is no longer supported.</string>
    <string name="version_up_title">Update</string>
    <string name="version_up_now">Update now</string>
    <string name="version_up_later">Later</string>
    <string name="ear">Earnings(click for tripwise)</string>
    <string name="tripf">Trip fare</string>
    <string name="num">Customer Phone Number</string>
    <string name="dtopp">Enter Drop Location</string>
    <string name="stop1">Please fill in stop1 address</string>
    <string name="trips">Trip Fare</string>
    <string name="Start">Start</string>
    <string name="Pause">Pause</string>
    <string name="Slide">Slide to Arrive</string>
    <string name="Rider">Rider\'s Waiting time</string>
    <string name="cor">Corporate Payment</string>
    <string name="Confirmp">Confirm Payment</string>
    <string name="corpo">Corporate</string>
    <string name="CollectFare">Collect Fare</string>
    <string name="roundoff">Rounded Off</string>
    <string name="coupon">Coupon Savings</string>
    <string name="acce">Total Access Fee</string>
    <string name="ridefare">Ride fare</string>
    <string name="bill">Bill Details</string>
    <string name="invoicecopy">Get Invoice copy</string>
    <string name="gethelp">Get Help</string>
    <string name="Message">Message</string>
    <string name="NoMessage">No Message</string>
    <string name="Rateyourtripwith">Rate your trip with</string>
    <string name="EnterTollFee">Enter Toll Fee</string>
    <string name="EnterExtraFee">Enter Extra Fee</string>
    <string name="EnterBaseFee">Enter Base Fee</string>
    <string name="EnterAmount">Enter Amount</string>
    <string name="welcome_back">Welcome to Cab-E</string>
    <string name="whats_your_mail_address">What\'s your email address?</string>
    <string name="i_forgot_my_password">I forgot my password ?</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="enter_your_mail_id">Enter your mail ID</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="password_size">Password size must be atleast 6</string>
    <string name="sample_mail_id">name@examplecom</string>
    <string name="mobile_Number">Enter Your Mobile Number</string>
    <string name="otp">OTP</string>
    <string name="otp_text">Kindly Enter the 6 digit code received on your mobile</string>
    <string name="sign_in_password">Password</string>
    <string name="sign_in_vehicle_no">Vehicle No</string>
    <string name="example_mobile_num">0987654321</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="login_btn">LogIn</string>
    <string name="send_otp_btn">Send OTP</string>
    <string name="Erro_Signin_Message" tools:ignore="DuplicateDefinition,MissingTranslation">Username or password incorrect</string>
    <string name="email">Enter your Email Id</string>
    <string name="invalid_email"> Your Mail ID Not Valid</string>
    <string name="invalid_password">Enter Your Password</string>
    <string name="enter_vehicle_no">Enter Your vehicle No</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_name">Enter Your Name</string>
    <string name="signup_enter_password">Please Enter Password</string>
    <string name="signup_password_minimum">Password Length Minimum 6 Digits</string>
    <string name="signup_mobile_no">Enter Mobile Number</string>
    <string name="signup_enter_conf_password">Please Enter Confirm Password</string>
    <string name="signup_password_not_match">Password Or Confirm Password Not Match</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="i_agree">I agree to  </string>
    <string name="terms_">Terms of Service</string>
    <string name="next">Next</string>
    <string name="riding_status">Rider\'s Waiting time</string>
    <string name="pick_me_start">Start</string>
    <string name="destination_text">Destination</string>
    <string name="stop_label_one">Stop 1</string>
    <string name="stop_label_two">Stop 2</string>
    <string name="add_stop">Add stop</string>
    <string name="cashout">Cashout</string>
    <string name="your_earnings">Your Earnings</string>
    <string name="driver_wallet">Driver Earnings</string>
    <string name="from_to">Mar 01 to 31</string>
    <string name="Today"><b>Today</b> Apr 10</string>
    <string name="no_rides">You didn\'t take any rides yet</string>
    <string name="no_rides_today">You didn\'t take any rides today</string>
    <string name="see_all_activity">See all Activity</string>
    <string name="time">Time</string>
    <string name="distance">Distance</string>
    <string name="time_distance">Date/Distance
</string>
    <string name="trip_status">Trip Status</string>
    <string name="searching_status">SEARCHING</string>
    <string name="cancelled_status">CANCELLED</string>
    <string name="accepted_status">ACCEPTED</string>
    <string name="started_status">STARTED</string>
    <string name="arrived_status">ARRIVED</string>
    <string name="pickedup_status">PICKEDUP</string>
    <string name="dropped_status">DROPPED</string>
    <string name="completed_status">COMPLETED</string>
    <string name="scheduled_status">SCHEDULED</string>
    <string name="end_status">END</string>
    <string name="status">Trip Status</string>
    <string name="service_name">Service Name</string>
    <string name="booking_id">Booking Id</string>
    <string name="request_id">Request Id</string>
    <string name="total">Total</string>
    <string name="trip_fare">Fees</string>
    <string name="tips">Tips
</string>
    <string name="trip_commission">Commission
</string>
    <string name="total_earnings">Total Earnings</string>
    <string name="target_completed">delivery completed
</string>
    <string name="success_title">&appName;</string>
    <string name="success_desc">Your Register Successfully \n click OK button to login</string>
    <string name="success_password_desc">Your Password Changed Successfully \n click OK button to login</string>
    <string name="success_ok">OK</string>
    <string name="alert_success">Success</string>
    <string name="alert_error">Error</string>
    <string name="alert_success_desc">Success Description</string>
    <string name="alert_error_desc">Error Description</string>
    <string name="alert_ok">OK</string>
    <string name="something_went_wrong_net">Something went wrong, Please check internet connection</string>
    <string name="email_validation">Enter your email ID</string>
    <string name="mobile_validation">Enter your mobile number</string>
    <string name="not_valid_email">Not a valid email ID</string>
    <string name="not_valid_mobile">Not a valid mobile number</string>
    <string name="password_validation">Password could not be left empty</string>
    <string name="first_name_empty">First name required</string>
    <string name="last_name_empty">Last name required</string>
    <string name="mobile_number_empty">Mobile number required</string>
    <string name="terms_conditon_msg">Please accept the terms &amp; conditions</string>
    <string name="profile_img_err">Please Select Profile Image</string>
    <string name="mobile_number_validation">Mobile number must have numbers between 10 to 20 digits</string>
    <string name="otp_validation">OTP field is required</string>
    <string name="inncorrect_otp">Incorrect OTP</string>
    <string name="confirm_password_validation">Password mismatch</string>
    <string name="reset_password">Reset Password</string>
    <string name="note">Note : Please enter the otp send to your registered email address</string>
    <string name="secrete_code">Enter OTP</string>
    <string-array name="time_period">
        <item>Today</item>
        <item>Week</item>
        <item>Month</item>
        <item>Year</item>
        <item>All</item>
    </string-array>
    <string name="summary">Summary</string>
    <string name="total_rides">Total No Of Rides</string>
    <string name="revenue">Revenue</string>
    <string name="schedule_rides">No Of Scheduled Rides</string>
    <string name="canceled_rides">Cancelled Rides</string>
    <string name="rides">Rides</string>
    <string name="cancel_ride_desc">Do you want to cancel &service; ?</string>
    <string name="no_notification">Waiting for notifications?</string>
    <string name="no_notification_desc">We will send you notification if something happens new</string>
    <string name="no_search_result">No Search results!!1</string>
    <string name="no_search_result_desc">No result found on your search. Try next time</string>
    <string name="no_corporate">Create Corporate Profile</string>
    <string name="no_corporate_desc">Create this profile, to get your work related ride details and invoice on your corporate email</string>
    <string name="no_internet">No Internet</string>
    <string name="action_trips">Your Trips</string>
    <string name="action_street_ride">Street Ride</string>
    <string name="action_earnings">Earnings</string>
    <string name="action_summary">Summary</string>
    <string name="action_settings_item">Settings</string>
    <string name="action_emergency_contact">Emergency</string>
    <string name="action_notifcation">Notification</string>
    <string name="action_rewards">Your Rewards</string>
    <string name="eclimit">Maximum you can add 5 contacts to your Emergency List</string>
    <string name="emergencytxt">An SOS message, including your GPS coordinates will be sent to your Emergency Contacts</string>
    <string name="dummy_fare" translatable="false">$ 0.00</string>
    <string name="payment_type">Payment Type :</string>
    <string name="invoice_cash">Cash</string>
    <string name="invoice_cash_desc">Kindly Collect Cash from Customer</string>
    <string name="invoice_booking_id">Booking ID</string>
    <string name="invoice_distance">Distance</string>
    <string name="invoice_total">Total</string>
    <string name="invoice_no_of_seat">4 Seats</string>
    <string name="company_name"> Elite Taxi - Invoice</string>
    <string name="company_address">24 graham rd , Clayton South Victoria-3169</string>
    <string name="company_phone">Ph: 04 - 00007</string>
    <string name="company_website">info@elitetaxi.com</string>
    <string name="action_logout">Logout</string>
    <string name="uploaddocument">Upload Document</string>
    <string name="back">Back</string>
</resources>