<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_view"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/alert_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:src="@mipmap/ic_launcher" />

    <com.eviort.cabedriver.NTCustomView.NTBoldTextView
        android:id="@+id/alert_title"
        style="@style/NTLargeTextAppearance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alert_success" />

    <com.eviort.cabedriver.NTCustomView.NTTextView
        android:id="@+id/alert_desc"
        style="@style/NTRegularTextAppearance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:gravity="center"
        android:text="@string/alert_success_desc" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:gravity="right">

        <com.eviort.cabedriver.NTCustomView.NTBoldTextView
            android:id="@+id/btnOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:padding="@dimen/_5sdp"
            android:text="@string/alert_ok"
            android:textColor="@color/theme_secondary"
            android:textSize="@dimen/_12sdp" />
    </LinearLayout>

</LinearLayout>