<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:background="@color/theme_secondary"
            android:gravity="center"
            android:orientation="vertical">


            <com.eviort.cabedriver.NTCustomView.NTBoldTextView
                style="@style/NTLargeTextAppearanceWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/company_name" />

            <com.eviort.cabedriver.NTCustomView.NTTextView
                style="@style/NTRegularTextAppearanceWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/company_address" />


            <com.eviort.cabedriver.NTCustomView.NTTextView
                style="@style/NTRegularTextAppearanceWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/company_phone" />


            <com.eviort.cabedriver.NTCustomView.NTTextView
                style="@style/NTRegularTextAppearanceWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/company_website" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_weight="7"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/_10sdp"
                app:cardElevation="@dimen/_10sdp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <com.eviort.cabedriver.NTCustomView.NTTextView
                            style="@style/NTRegularTextAppearance"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/payment_type" />

                        <com.eviort.cabedriver.NTCustomView.NTBoldTextView
                            style="@style/NTRegularTextAppearance"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/invoice_cash" />
                    </LinearLayout>

                    <com.eviort.cabedriver.NTCustomView.NTTextView
                        style="@style/NTHintTextAppearance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/invoice_cash_desc" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                app:cardCornerRadius="@dimen/_10sdp"
                app:cardElevation="@dimen/_5sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:orientation="horizontal">

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <com.eviort.cabedriver.NTCustomView.NTTextView
                                style="@style/NTHintTextAppearance"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentLeft="true"
                                android:layout_centerInParent="true"
                                android:text="@string/invoice_booking_id" />

                            <com.eviort.cabedriver.NTCustomView.NTTextView
                                style="@style/NTRegularTextAppearance"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentRight="true"
                                android:layout_centerInParent="true"
                                android:text="@string/dummy_fare" />

                        </RelativeLayout>


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:orientation="horizontal">

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <com.eviort.cabedriver.NTCustomView.NTTextView
                                style="@style/NTHintTextAppearance"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentLeft="true"
                                android:layout_centerInParent="true"
                                android:text="@string/invoice_distance" />

                            <com.eviort.cabedriver.NTCustomView.NTTextView
                                style="@style/NTRegularTextAppearance"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentRight="true"
                                android:layout_centerInParent="true"
                                android:text="@string/dummy_fare" />

                        </RelativeLayout>


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:orientation="horizontal">

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <com.eviort.cabedriver.NTCustomView.NTTextView
                                style="@style/NTHintTextAppearance"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentLeft="true"
                                android:layout_centerInParent="true"
                                android:text="@string/invoice_no_of_seat" />

                            <com.eviort.cabedriver.NTCustomView.NTTextView
                                style="@style/NTRegularTextAppearance"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentRight="true"
                                android:layout_centerInParent="true"
                                android:text="@string/dummy_fare" />

                        </RelativeLayout>


                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_1sdp"
                        android:background="@color/colorDivider" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:orientation="horizontal">

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <com.eviort.cabedriver.NTCustomView.NTTextView
                                style="@style/NTHintTextAppearance"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentLeft="true"
                                android:layout_centerInParent="true"
                                android:text="@string/invoice_total" />

                            <com.eviort.cabedriver.NTCustomView.NTTextView
                                style="@style/NTLargeTextAppearance"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentRight="true"
                                android:layout_centerInParent="true"
                                android:text="@string/dummy_fare" />

                        </RelativeLayout>


                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>