<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".NTFragment.FragmentEmergencyContact">

    <LinearLayout
        android:id="@+id/lnrTitle"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/backArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/_5sdp"
            android:contentDescription="@string/back"
            android:padding="@dimen/_2sdp"
            android:src="@drawable/icon_backarrow_black"
            android:tint="@color/black"
            android:visibility="visible" />

        <com.eviort.cabedriver.NTCustomView.NTBoldTextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_weight="1"

            android:gravity="center_vertical"
            android:text="@string/action_emergency_contact"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sdp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_mainLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.eviort.cabedriver.NTCustomView.NTTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/eclimit"
                android:textColor="@color/textColorSecondary" />

            <ImageView
                android:id="@+id/addContactsBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/rounded_button"
                android:padding="@dimen/_10sdp"
                android:src="@drawable/icon_addlocation_white" />
        </LinearLayout>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/ec_recyclerview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </androidx.recyclerview.widget.RecyclerView>


                <com.eviort.cabedriver.NTCustomView.NTTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/emergencytxt"
                    android:textColor="@color/textColorSecondary" />

            </LinearLayout>


        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_errorLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <include layout="@layout/fragment_emergency_contact_error" />
    </LinearLayout>

</LinearLayout>