<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/lnrTitle"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/backArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/_5sdp"
            android:contentDescription="@string/back"
            android:padding="@dimen/_2sdp"
            android:src="@drawable/icon_backarrow_black"
            android:tint="@color/black"
            android:visibility="visible" />

        <com.eviort.cabedriver.NTCustomView.NTBoldTextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/action_notifcation"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lnrTitle"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:clipToPadding="false"
            android:padding="@dimen/_10sdp"
            android:scrollbars="vertical" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/errorLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/_5sdp"
        android:visibility="visible">

        <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            card_view:cardCornerRadius="@dimen/_13sdp">


            <ImageView
                android:id="@+id/error_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:padding="@dimen/_5sdp"
                app:srcCompat="@drawable/ic_notification" />

        </androidx.cardview.widget.CardView>

        <com.eviort.cabedriver.NTCustomView.NTBoldTextView
            android:id="@+id/no_past_trip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/error_image"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/no_notification"
            android:textColor="@color/text_color_black"
            android:textSize="@dimen/_16sdp" />

        <com.eviort.cabedriver.NTCustomView.NTTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/no_past_trip"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:lineSpacingMultiplier="1.5"
            android:padding="@dimen/_5sdp"
            android:text="@string/no_notification_desc"
            android:textColor="@color/text_color_black"
            android:textSize="@dimen/_14sdp" />


    </LinearLayout>


</LinearLayout>